<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp" >

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_black_64"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView_editImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/click_to_edit_picture"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.edmodo.cropper2.CropImageView
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cropImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="0dp"
            android:visibility="gone"
            custom:imageResource="@drawable/background_black" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_image" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_record" />

        <Button
            android:id="@+id/button_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_record" />
        
        <Button
            android:id="@+id/button_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate_image"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_image"
            android:visibility="gone" />
        
    </LinearLayout>

</LinearLayout>