<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/white"
    tools:context=".RecordingActivity" >

    <TextView
        android:id="@+id/textView_record_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200sp"
        android:gravity="center_horizontal"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView_record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200sp"
        android:gravity="center_horizontal"
        android:text="@string/start_recording"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/image_record"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240sp"
        android:contentDescription="@string/app_name" />

    <Button
        android:minWidth="100dp"
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="110dp"
        android:text="@string/reset_record"
        android:visibility="gone" />

    <Button
        android:minWidth="100dp"
        android:id="@+id/button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/play_record" />

    <Button
        android:minWidth="100dp"
        android:id="@+id/button_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/post_record" />

</RelativeLayout>